apps/todo-app-v1.1/todo-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: development
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: frankhul/todo-backend:v0.1
