apps/todo-app-v1.1/todo-backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-backend-svc
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 4001
