apps/todo-app-v1.1/todo-backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  namespace: development
spec:
  rules:
  - http:
      paths:
      - path: /todo-backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2345
